--- a/greentrace/greentrace/react-frontend/package.json
+++ b/greentrace/greentrace/react-frontend/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage":"http://falkeetsingh.github.io/Team-Quad-Developers",
   "name": "greentrace",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "proxy": "https://localhost:5000",
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
